--- a/pages/registro.html
+++ b/pages/registro.html
@@ -42,7 +42,7 @@
                 </ul>
             </nav>
             <footer>
-                <p class="text-footer"><strong>Los precios pueden aumentar o disminuir dependiendo el proveedor, cuando realice la cotizacion pude contactarnos para obtener mas informacion de cada producto.</strong></p>
+                <p class="text-footer"><strong>Los precios pueden variar dependiendo el proveedor, cuando realice la cotizacion pude contactarnos para obtener mas informacion de cada producto.</strong></p>
             </footer>
         </aside>
         <main class="main-registro">
