--- a/pages/menu.html
+++ b/pages/menu.html
@@ -40,6 +40,12 @@
                         <button id="Electrodomesticos" class="boton-menu boton-categoria "><i class="bi bi-hand-index"></i>Electrodomesticos</button>
                     </li>
                     <li>
+                        <button id="Electronica" class="boton-menu boton-categoria "><i class="bi bi-hand-index"></i>Electronica</button>
+                    </li>
+                    <li>
+                        <button id="Muebles" class="boton-menu boton-categoria "><i class="bi bi-hand-index"></i>Muebles</button>
+                    </li>
+                    <li>
                         <a class="boton-menu boton-carrito" href="carrito.html">
                             <i class="bi bi-cart-fill"></i>Carrito<span class="numerito" id="numerito"> 0</span>
                         </a>
@@ -52,7 +58,7 @@
                 </ul>
             </nav>
             <footer>
-                <p class="text-footer"><strong>Los precios pueden aumentar o disminuir dependiendo el proveedor, cuando realice la cotizacion pude contactarnos para obtener mas informacion de cada producto.</strong></p>
+                <p class="text-footer"><strong>Los precios y el stock pueden aumentar o disminuir dependiendo el proveedor, cuando realice la cotizacion pude contactarnos para obtener mas informacion de cada producto.</strong></p>
             </footer>
         </aside>
         <main>
