--- a/pages/carrito.html
+++ b/pages/carrito.html
@@ -45,7 +45,7 @@
                 </ul>
             </nav>
             <footer>
-                <p class="text-footer"><strong>Los precios y el stock pueden aumentar o disminuir dependiendo el proveedor, cuando realice la cotizacion pude contactarnos para obtener mas informacion de cada producto.</strong></p>
+                <p class="text-footer"><strong>Los precios y el stock pueden variar dependiendo el proveedor, cuando realice la cotización pude contactarnos para obtener mas información de cada producto.</strong></p>
             </footer>
         </aside>
         <main>
