--- a/pages/registro.html
+++ b/pages/registro.html
@@ -43,14 +43,14 @@
                 </ul>
             </nav>
             <footer>
-                <p class="text-footer"><strong>Los precios y el stock pueden variar dependiendo el proveedor, cuando realice la cotizacion pude contactarnos para obtener mas informacion de cada producto.</strong></p>
+                <p class="text-footer"><strong>Los precios y el stock pueden variar dependiendo el proveedor, cuando realice la cotización pude contactarnos para obtener mas información de cada producto.</strong></p>
             </footer>
         </aside>
         <main class="main-registro">
             <div class="form-box">
                 <form class="form">
                     <span class="title">Registro</span>
-                    <span class="subtitle">Ingresa la informacion en los campos correctos.</span>
+                    <span class="subtitle">Ingresa la información en los campos correctos.</span>
                     <div class="form-container">
                         <input type="text" class="input" id="nom" placeholder="Nombre completo">
                         <input type="text" class="input" id="curp" placeholder="CURP" pattern="[A-Z]{3}[0-9]{6}[A-Z]{2}[0-9A-Z]{1}[0-9]{1}" required>
