--- a/pages/menu.html
+++ b/pages/menu.html
@@ -38,10 +38,10 @@
                         <button id="Cocina" class="boton-menu boton-categoria "><i class="bi bi-hand-index"></i>Cocina</button>
                     </li>
                     <li>
-                        <button id="Electrodomesticos" class="boton-menu boton-categoria "><i class="bi bi-hand-index"></i>Electrodomesticos</button>
+                        <button id="Electrodomesticos" class="boton-menu boton-categoria "><i class="bi bi-hand-index"></i>Electrodomésticos</button>
                     </li>
                     <li>
-                        <button id="Electronica" class="boton-menu boton-categoria "><i class="bi bi-hand-index"></i>Electronica</button>
+                        <button id="Electronica" class="boton-menu boton-categoria "><i class="bi bi-hand-index"></i>Electrónica</button>
                     </li>
                     <li>
                         <button id="Muebles" class="boton-menu boton-categoria "><i class="bi bi-hand-index"></i>Muebles</button>
@@ -59,7 +59,7 @@
                 </ul>
             </nav>
             <footer>
-                <p class="text-footer"><strong>Los precios y el stock pueden aumentar o disminuir dependiendo el proveedor, cuando realice la cotizacion pude contactarnos para obtener mas informacion de cada producto.</strong></p>
+                <p class="text-footer"><strong>Los precios y el stock pueden variar dependiendo el proveedor, cuando realice la cotización pude contactarnos para obtener mas información de cada producto.</strong></p>
             </footer>
         </aside>
         <main>
