--- a/menu.html
+++ b/menu.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/css/menu.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="https://cdn.rawgit.com/google/code-prettify/master/src/prettify.css">
+    <script src="https://cdn.rawgit.com/google/code-prettify/master/src/prettify.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>    
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
-    <link rel="stylesheet" href="../css/menu.css">
     <title>RYCA</title>
 </head>
 <body>
@@ -48,12 +50,12 @@
                         <button id="Muebles" class="boton-menu boton-categoria "><i class="bi bi-hand-index"></i>Muebles</button>
                     </li>
                     <li>
-                        <a class="boton-menu boton-carrito" href="carrito.html">
+                        <a class="boton-menu boton-carrito" href="/pages/carrito.html">
                             <i class="bi bi-cart-fill"></i>Carrito<span class="numerito" id="numerito"> 0 </span>
                         </a>
                     </li>
                     <li>
-                        <a class="boton-menu boton-registro" href="registro.html">
+                        <a class="boton-menu boton-registro" href="/pages/registro.html">
                             <i class="bi bi-ui-checks"></i>Registro
                         </a>
                     </li>
@@ -72,7 +74,7 @@
     </div>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
-    <script src="../js/menu.js"></script>
-    <script src="../js/main.js"></script>
+    <script src="/js/menu.js"></script>
+    <script src="/js/main.js"></script>
 </body>
 </html>
