--- a/pages/registro.html
+++ b/pages/registro.html
@@ -4,14 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../css/menu.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="https://cdn.rawgit.com/google/code-prettify/master/src/prettify.css">
+    <script src="https://cdn.rawgit.com/google/code-prettify/master/src/prettify.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.2.2/pdfmake.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.2.2/vfs_fonts.js"></script>
-    <script src="JsBarcode.all.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/jsbarcode/3.6.0/JsBarcode.all.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.3.1/jspdf.umd.min.js"></script>
-    <link rel="stylesheet" href="../css/menu.css">
     <title>Registro</title>
 </head>
 <body>
@@ -32,7 +34,7 @@
             <nav>
                 <ul>
                     <li>
-                        <a class="boton-menu boton-volver" href="menu.html">
+                        <a class="boton-menu boton-volver" href="../menu.html">
                             <i class="bi bi-arrow-return-left"></i></i>Seguir comprando
                         </a>
                     </li>
