--- a/pages/carrito.html
+++ b/pages/carrito.html
@@ -67,7 +67,7 @@
                             <p>Total:</p>
                             <p id="total">$ 2100</p>
                         </div>
-                        <button id="carrito-acciones-comprar" class="carrito-acciones-comprar" onclick="ejecutarFunciones()">COMPRAR AHORA</button>
+                        <button id="carrito-acciones-comprar" class="carrito-acciones-comprar" onclick="ejecutarFunciones()">COTIZAR AHORA</button>
                     </div>
                 </div>
                 <p id="carrito-comprado" class="carrito-comprado disabled">Muchas gracias por tu compra. <i class="bi bi-emoji-laughing"></i></p>
